feat: add product attribute and product variant ui
#129
